weight init problem

--- a/Ch6_Learning_technique(optimization)/L4_AdaGrad.ipynb
+++ b/Ch6_Learning_technique(optimization)/L4_AdaGrad.ipynb
@@ -1,6 +1,103 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AdaGrad\n",
+    "(p.196)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adaptive Gradient :원소마다 적응적으로 변하는 기울기 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Example</b> : AdaGrad를 클래스로 구현 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AdaGrad: \n",
+    "    \n",
+    "    def __init__(self, lr=0.01):     # 생성자로 초기화 \n",
+    "        self.lr = lr \n",
+    "        self.h  = None               # 초기 값은 0 \n",
+    "        \n",
+    "    def update(self, params, grads):\n",
+    "        \n",
+    "        if self.h is None:\n",
+    "            self.h = {}              # <dict> 객체로 초기화 \n",
+    "            \n",
+    "            for key, val in params.items():\n",
+    "                self.h[key] = np.zeros_like(val)\n",
+    "                \n",
+    "        for key in params.keys():\n",
+    "            self.h[key] += grads[key] * grads[key]                                   #식 6.5\n",
+    "            params[key] -= self.lr * grads[key] / (np.sqrt(self.h[key]) + 1e-7 )     #식 6.6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "★ 여기서 주의할 것은 마지막 줄에 1e-7이라는 작은 값을 더하는 부분 (p.198)\n",
+    "> self.h[key]에 0이 담겨 있어도 0으로 나누는 위험한 사태를 막아줌 \n",
+    "  * $\\frac{x}{0}$ &rarr; inf "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RMSprop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Example</b>: RMSprop를 클래스로 구현 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RMSprop:\n",
+    "\n",
+    "    \"\"\"RMSprop\"\"\"\n",
+    "\n",
+    "    def __init__(self, lr=0.01, decay_rate = 0.99):\n",
+    "        self.lr = lr\n",
+    "        self.decay_rate = decay_rate\n",
+    "        self.h = None\n",
+    "        \n",
+    "    def update(self, params, grads):\n",
+    "        if self.h is None:\n",
+    "            self.h = {}\n",
+    "            for key, val in params.items():\n",
+    "                self.h[key] = np.zeros_like(val)\n",
+    "            \n",
+    "        for key in params.keys():\n",
+    "            self.h[key] *= self.decay_rate\n",
+    "            self.h[key] += (1 - self.decay_rate) * grads[key] * grads[key]\n",
+    "            params[key] -= self.lr * grads[key] / (np.sqrt(self.h[key]) + 1e-7)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
